# freertos-posix-cmake-example

./: CMakeLists.txt  readme.md
cmake/: FreeRTOS.cmake
include/: FreeRTOSConfig.h
src/: FreeRtosSupport.c  main.cpp
